# Scheme-interpreter

./: CMakeLists.txt  README.md  sources.cmake
lib/: garbage_collector.cpp  garbage_collector.h  helpers.cpp  helpers.h  object.cpp  object.h  parser.cpp  parser.h  scheme.cpp  scheme.h  tokenizer.cpp  tokenizer.h
lib/operations_impl/: boolean_operations.cpp  boolean_operations.h  cell_evaluation.cpp  integer_operations.cpp  integer_operations.h  lambda.cpp  lambda.h  list_operations.cpp  list_operations.h  variables.cpp  variables.h
repl/: main.cpp
